--- a/templates/index.html
+++ b/templates/index.html
@@ -420,7 +420,7 @@
         
         <div class="content">
             <div class="upload-section">
-                <form id="uploadForm" action="/predict" method="POST" enctype="multipart/form-data">
+                <form id="uploadForm" action="/" method="POST" enctype="multipart/form-data">
                     <div class="form-group">
                         <label for="file">Seleccionar imagen microscópica (TIFF, JPG, PNG):</label>
                         <input type="file" name="file" id="file" accept=".tif,.tiff,.png,.jpg,.jpeg" required>
